set overflow: hidden, hopefully this fixes the text overflow

--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,14 @@ body {
 }
 
 .container {
+    overflow: hidden;
+    width: 100%;
     display: inline-block;
 }
 
 .typewriter {
     color: #2E8B57;
-    width: 100%;
+    max-width: 100%;
     overflow: hidden;
     animation:
         typing 5s steps(157),
@@ -21,7 +23,7 @@ body {
 }
 
 .typewriter1 {
-    width: 100%;
+    max-width: 100%;
     white-space: nowrap;
     overflow: hidden;
     animation-delay: 5s;
